@@ -2830,5 +2830,9 @@ It copies decoded video frame to system RAM, so it can be slow!</source>
         <source>&quot;youtube-dl&quot; has been successfully downloaded!</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Quality</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 </TS>
