@@ -55,8 +55,8 @@ Extensions::Extensions() :
 	init("YouTube/MultiStream", true);
 	init("YouTube/Subtitles", true);
 	init("YouTube/youtubedl", QString());
-	init("YouTube/ItagVideoList", QStringList() << "299" << "298" << "137" << "136" << "135");
-	init("YouTube/ItagAudioList", QStringList() << "251" << "171" << "141");
+	init("YouTube/ItagVideoList", YouTubeW::getQualityPresetString(YouTubeW::_1080p60));
+	init("YouTube/ItagAudioList", QStringList() << "251" << "171" << "140");
 	init("YouTube/ItagList", QStringList() << "22" << "43" << "18");
 
 #ifdef USE_LASTFM
